# langchain-steel

./: .gitignore  CLAUDE.md  LIVE_API_VERIFICATION_REPORT.md  STRATEGY.md  TODO.md  VERIFICATION_REPORT.md  demo_hacker_news.py  example_usage.py  quick_test.py  simple_demo.py  test_action_parsing.py  test_browser_agent.py  test_refactored_browser_agent.py  test_steel_connection.py
.claude/: settings.local.json
demo/: final_hackernews.py  hackernews_scrape.py  hackernews_top3.py  nintendo_scraper.py  nintendo_switch_2_croatia.py  nintendo_switch_2_simple.py  simple_hackernews.py
docs/: README.md  examples.md  refactored_browser_agent.md  steel-provider.md  steel_authentication_guide.md  steel_browser_agent_tools.md  steel_document_loader.md  steel_langgraph_integration.md  steel_token_efficiency.md  steel_web_scraping_tools.md
langchain-steel/: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
langchain-steel/examples/: agent_integration.py  basic_scraping.py  browser_automation.py  document_loading.py
langchain-steel/langchain_steel/: __init__.py
langchain-steel/langchain_steel/agents/: __init__.py  browser_agent.py  claude_computer_use.py  computer_use.py
langchain-steel/langchain_steel/document_loaders/: __init__.py  steel_loader.py
langchain-steel/langchain_steel/tools/: __init__.py  base.py  scrape.py
langchain-steel/langchain_steel/utils/: __init__.py  client.py  config.py  errors.py  retry.py
langchain-steel/tests/: test_basic_functionality.py  test_integration.py  test_optimizations.py
